# vanillagreencom-pi-extensions

./: .env.local.example  .gitignore  AGENTS.md  README.md  vstack.toml
agents/: rust.md  (+9 more)
skills/flightdeck/lib/flightdeck-dashboard/: Cargo.toml
skills/flightdeck/lib/flightdeck-dashboard/src/: actions.rs  cli.rs  fixtures.rs  launch.rs  lib.rs  main.rs  settings_catalog.rs
skills/flightdeck/lib/flightdeck-dashboard/src/activity/: format.rs  jsonl.rs  mod.rs
skills/flightdeck/lib/flightdeck-dashboard/src/app/: command.rs  effects.rs  hitmap.rs  keymap.rs  mod.rs  model.rs  msg.rs  theme.rs  update.rs
skills/flightdeck/lib/flightdeck-dashboard/src/cost/: aggregator.rs  claude.rs  codex.rs  mod.rs  opencode.rs  pi.rs  pricing.rs  pricing.toml
skills/flightdeck/lib/flightdeck-dashboard/src/daemon/: cli.rs  rpc.rs  socket.rs
skills/flightdeck/lib/flightdeck-dashboard/src/events/: mod.rs
skills/flightdeck/lib/flightdeck-dashboard/src/fixtures/: activity-mixed.jsonl  empty.json  mixed.json  one-adhoc.json  one-issue.json  paused.json  terminated.json  wide-char.json
skills/flightdeck/lib/flightdeck-dashboard/src/state/: archive_order.rs  mod.rs  schema.rs  tracked_entries.rs
skills/flightdeck/lib/flightdeck-dashboard/src/util/: display_width.rs  logging.rs  mod.rs
skills/flightdeck/lib/flightdeck-dashboard/src/watcher/: mod.rs
skills/flightdeck/lib/flightdeck-dashboard/tests/: activity.rs  activity_export.rs  cost.rs  daemon_pi_subscriber.rs  daemon_socket.rs  launch.rs  popup_input.rs  snapshot_overview.rs  snapshot_popups.rs  snapshot_tabs.rs
skills/flightdeck/lib/flightdeck-dashboard/tests/activity/: archive_fallback.rs  filter.rs  incremental.rs  malformed.rs  parse.rs  rotation.rs
skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/: snapshot_overview__overview_archive_banner.snap  snapshot_overview__overview_archive_fallback_from_dir.snap  snapshot_overview__overview_compact_dashboard_widget.snap  snapshot_overview__overview_compact_tree_dashboard_widget.snap  (+49 more)
(+450 files in other folders)
