[package]
name = "flightdeck-dashboard"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
publish = false

[dependencies]
chrono = { version = "0.4.42", features = ["serde", "clock"] }
clap = { version = "4.5.51", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
fs2 = "0.4.3"
futures = "0.3.31"
nix = { version = "0.29.0", features = ["process", "signal"] }
notify = "6.1.1"
notify-debouncer-full = "0.3.2"
ratatui = "0.29.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.16.0"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs", "signal", "time", "sync", "process", "net", "io-util"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[dev-dependencies]
insta = "1.44.0"
tempfile = "3.23.0"
